<resources>
    <string name="app_name">Soccer News</string>
    <string name="title_news">News</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_new">Title</string>
    <string name="description_new">descripition</string>
    <string name="text_new">Text new</string>
    <string name="Open_link">Open Link</string>
    <string name="action_2">action</string>
    <string name="botao_de_compartilhar">botao de compartilhar</string>
    <string name="botao_favoritar">botao de favoritar</string>
</resources>