<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_item_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="8dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/iv_new"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/ic_launcher_background"
                android:contentDescription="@string/description_new"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/tv_title_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_new"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/tv_descripition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/description_new"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/tv_text_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/text_new"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_open_link"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/Open_link" />


                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/iv_favorite"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="51dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="170dp"
                    android:contentDescription="@string/botao_favoritar"
                    android:focusable="true"
                    android:padding="4dp"
                    android:foreground="?android:selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_favorite" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/iv_compartilhar"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="49dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:contentDescription="@string/botao_de_compartilhar"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_share" />

            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>